--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,16 @@ body {
   background-color: rgb(31, 30, 30);
   font-family: "Roboto", sans-serif;
 }
+h1 {
+  text-align: center;
+  color: white;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
 form {
   width: 30rem;
@@ -27,6 +37,10 @@ select {
   border: 1px solid rgb(184, 184, 184);
   padding: 0.25rem;
   color: rgb(61, 58, 58);
+}
+
+textarea {
+  resize: none;
 }
 
 input:focus,
